# Big-Data

./: EDA.ipynb  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  batchStorage.py  data.json  news.py  priceBitCoin.py  pyproject.toml  realTimeBTCUSDPrice.py  recup_data.py  requirements.txt
data/: bitcoin_prices_volume_rsi_ma50_hashrate.csv  bitcoin_prices_volume_rsi_ma50_hashrate_wallets.csv  btc_prices_3_months.json  processData.json
src/: batchStorage.py  ingestion.py  news.py  priceBitCoin.py  realTimeBTCUSDPrice.py  recup_data.py
tests/: test_ingestion.py
